# sparselizard-users

./: README.md  apt.txt  environment.yml  start
api/python/: CMakeLists.txt  README.md  pythonapi.md  pythonapi.txt
api/python/examples/: validate.sh
api/python/examples/capacitance-computing/: main.py
api/python/examples/circuit-coupling-rlc-discharge/: main.py
api/python/examples/circuit-coupling-rlc-harmonic/: main.py
api/python/examples/eigenvalues-damped-elasticity-membrane-3d/: main.py
api/python/examples/eigenvalues-elasticity-membrane-3d/: main.py
api/python/examples/elasticity-membrane-3d/: main.py
api/python/examples/electric-motor-pmsm-2d/: main.py
api/python/examples/electromagnetic-waveguide-2d/: main.py
api/python/examples/electromagnetic-waveguide-3d/: main.py
api/python/examples/electromagnetic-waveguide-time-resolution-2d/: main.py
api/python/examples/electrostatics-1d/: main.py
api/python/examples/halfwave-dipole-antenna-2d/: main.py
api/python/examples/magnetic-force-sandbox-axisymmetry-2d/: main.py
api/python/examples/magnetodynamics-av-induction-3d/: main.py
api/python/examples/magnetostatics-scalar-potential-2d/: main.py
api/python/examples/magnetostatics-vector-potential-3d/: main.py
api/python/examples/magnetostatics-vector-potential-saturation-2d/: main.py
api/python/examples/magnetostriction-2d/: main.py
api/python/examples/nonlinear-electro-thermal-heating-3d/: main.py
api/python/examples/nonlinear-fsi-micropillar-2d/: main.py
api/python/examples/nonlinear-natural-convection-hpfem-2d/: main.py
api/python/examples/nonlinear-potentialflow-airfoil-2d/: main.py
api/python/examples/nonlinear-truss-elasticity-2d/: main.py
api/python/examples/periodic-condition-rotation-3d/: main.py
api/python/examples/photonic-waveguide-coupling-mode-2d/: main.py
api/python/examples/piezoelectricity-bilayer-3d/: main.py
api/python/examples/piezoresistor-strain-gauge-3d/: main.py
api/python/examples/reaction-force-computing/: main.py
api/python/examples/resistance-computing/: main.py
api/python/examples/spline-discrete-measured-samples/: main.py
api/python/examples/superconductor-axisymmetry-2d/: main.py
api/python/examples/viscousflow-microvalve-2d/: main.py
api/python/src/: densemat_wrapper.cpp  eigenvalue_wrapper.cpp  expression_wrapper.cpp  field_wrapper.cpp  formulation_wrapper.cpp  genalpha_wrapper.cpp  impliciteuler_wrapper.cpp  indexmat_wrapper.cpp  integration_wrapper.cpp  mat_wrapper.cpp  mesh_wrapper.cpp  parameter_wrapper.cpp  parameterselectedregion_wrapper.cpp  port_wrapper.cpp  shape_wrapper.cpp  sl_wrapper.cpp  slmpi_wrapper.cpp  spanningtree_wrapper.cpp  sparselizard_wrapper.cpp  sparselizard_wrapper.h  spline_wrapper.cpp  universe_wrapper.cpp  vec_wrapper.cpp  vectorfieldselect_wrapper.cpp  wallclock_wrapper.cpp
api/python/stubs/spylizard_stubs/: __init__.pyi  setup.py
examples/RF/Microstrip_lossless/: Line_impedance_lossless_electrostatics.cpp  README.md  microstrip.geo  microstrip.msh  validation.sce
examples/ddm/dirichlet/: main.cpp
examples/em/demagnetizing-field-2d-scalar-potential/: README.md  disk.geo  disk_ellipsoid.geo  disk_sphere.geo  disk_square.geo  main.cpp
examples/em/maxwell-stress-tensor/: main.cpp
examples/em/superconductor/hts/quench/hpFEM-electro-thermal-ybco-3d/: hastelloy_cp.txt  hastelloy_k.txt  hastelloy_r.txt  main.cpp  rebco_cp.txt  rebco_k.txt  tape.geo  tape.msh
examples/mechanic/vibration/backbone-curve-nonlinear-harmonic-balance/: ClampedBeam.geo  ClampedBeamcoarser.msh  ClampedBeamfiner.msh  main.cpp
